Update: Generator updated with more efficient, mongoose model and interface generated
