# server/routes.ts
@@ -4,6 +4,7 @@ import tenantsRouter from './api/controllers/tenants/router';
 import authRouter from './api/controllers/auth/router';
 import profileRouter from './api/controllers/profile/router';
 import profiletypeRouter from './api/controllers/profiletype/router';
+import addresstypeRouter from './api/controllers/addresstype/router';
 
 export default function routes(app: Application): void {
   app.use('/v1/users', usersRouter);
@@ -11,4 +12,5 @@ export default function routes(app: Application): void {
   app.use('/v1/auth/', authRouter);
   app.use('/v1/profile/', profileRouter);
   app.use('/v1/profiletype/', profiletypeRouter);
+  app.use('/v1/addresstype/', addresstypeRouter);
 }
